--- a/NOTES.html
+++ b/NOTES.html
@@ -1,7 +1,7 @@
 NOTES... 
 
 Map to-do
-1. Change style ref sheet on mapbox
+DONE 1. Change style ref sheet on mapbox 
 2. Make intro slide
 3. Find way to access link to photos stored on Github... raw file link? - automate access and parse link to geojson processing script
 4. Add data-time photo collection date
