Updated title and map

--- a/ALDPhotoMap.html
+++ b/ALDPhotoMap.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Squamish Plants</title>
+    <title>ALD Photo map</title>
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
@@ -107,7 +107,7 @@
 
     <div id="popup_title" class="popup_title">
         <span class="close" onclick="togglePopup()">&times;</span>
-        <img id="popup_titleImg" src="webmap-indigenous-plants-01.png" alt="Popup Image"> //insert intro card here
+        <img id="popup_titleImg" src="title_page-03.png" alt="Popup Image"> //insert intro card here
     </div>
 
     <button class="button" onclick="togglePopup()">Toggle Image</button>
