--- a/NOTES.html
+++ b/NOTES.html
@@ -3,5 +3,6 @@ NOTES...
 Map to-do
 DONE 1. Change style ref sheet on mapbox 
 2. Make intro slide
-3. Find way to access link to photos stored on Github... raw file link? - automate access and parse link to geojson processing script
+3. DONE Find way to access link to photos stored on Github... raw file link? - automate access and parse link to geojson processing script
 4. Add data-time photo collection date
+5. Change size of popup
