Deleted test .json folder, updated image2geojson to include dataset category and added function prototype for getting exif time data.

--- a/NewPhotoMap.html
+++ b/NewPhotoMap.html
@@ -449,7 +449,7 @@
         };
 
         // get an array of all unique `icon` properties
-        const Disturbances = ['ALD Map', 'Training Data', 'Photos', 'Vegetation classification'];
+        const Disturbances = ['ALD photos', 'Drone Photos', 'Flood photos'];
 
 
     //    for (const feature of source.features) {                                                          /// need to finish this code which populated Disturbances list
