Fixed bug in date property datatype to match geojson conventions

--- a/QHIPhotoMap.html
+++ b/QHIPhotoMap.html
@@ -504,12 +504,13 @@
 
                 const title = document.createElement('strong');
                 title.textContent =
-                    feature.properties.Category
+                    feature.properties.category
 
                 const ID = document.createElement('div');
                 ID.textContent =
-                    feature.properties.CategoryType + " " +
+                    feature.properties.category + " " +
                     feature.properties.Date
+                    feature.properties.
 
                     //feature.properties.species_count
 
