--- a/QHIPhotoMap.html
+++ b/QHIPhotoMap.html
@@ -82,7 +82,7 @@
         .button {
             position: absolute;
             border: white;
-            color: brown;
+            color: #4c203d;
             /* White text */
             padding: 15px 32px;
             /* Padding */
@@ -98,7 +98,7 @@
         }
 
         .button:hover {
-            background-color: #97cb34;
+            background-color: #93b593;
             /* Darker green background on hover */
             color: white;
             /* White text on hover */
@@ -160,7 +160,7 @@
         }
 
         .filter-group input[type='checkbox'] + label {
-            background-color: #97cb34;
+            background-color: #93b593;
             display: block;
             cursor: pointer;
             padding: 10px;
@@ -168,13 +168,13 @@
         }
 
         .filter-group input[type='checkbox'] + label {
-            background-color: #97cb34;
+            background-color: #93b593;
             text-transform: capitalize;
         }
 
         .filter-group input[type='checkbox'] + label:hover,
         .filter-group input[type='checkbox']:checked + label {
-            background-color: #97cb34;
+            background-color: #93b593;
         }
 
         .filter-group input[type='checkbox']:checked + label:before {
@@ -196,7 +196,7 @@
 
     <div id="popup_title" class="popup_title">
         <span class="close" onclick="togglePopup()">&times;</span>
-        <img id="popup_titleImg" src="title_page-03.png" alt="Popup Image"> 
+        <img id="popup_titleImg" src="title.png" alt="Popup Image"> 
     </div>
 
     <button class="button" onclick="togglePopup()">Toggle Title</button>
@@ -270,7 +270,7 @@
                 type: 'circle',
                 source: 'ALD_photos',
                 paint: {
-                    'circle-color': '#AFFF00',
+                    'circle-color': '#4c203d',
                     'circle-radius': 5,
                     'circle-stroke-width': .3,
                     'circle-stroke-color': '#fff',
@@ -283,7 +283,7 @@
                 type: 'circle',
                 source: 'ALD_photos',
                 paint: {
-                    'circle-color': '#AFFF00',
+                    'circle-color': '#93b593',
                     'circle-radius': 5,
                     'circle-stroke-width': .3,
                     'circle-stroke-color': '#fff',
