update link to RAW

--- a/QHIPhotoMap.html
+++ b/QHIPhotoMap.html
@@ -262,7 +262,7 @@
 
             map.addSource('ALD_photos', {
                 type: 'geojson',
-                data: 'https://cnorton27.github.io/ALD-Georef-Photo-map/Data/all_photos.geojson' // URL of GeoJSON data
+                data: 'https://raw.githubusercontent.com/cnorton27/ALD-Georef-Photo-map/refs/heads/main/Data/all_photos.geojson' // URL of GeoJSON data
             });
 
   
